ui: fix "that's it for today" message being cut off
close #169

--- a/app/homework/CalendarRow.styl
+++ b/app/homework/CalendarRow.styl
@@ -28,6 +28,7 @@
 		.noEvents
 			height: 70px
 			width: 200px
+			min-width: 200px
 			border: 1px #ccc solid
 			display: flex
 			justify-content: center
